--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "@rails/webpacker": "3.5",
     "bootstrap": "3",
     "jquery": "^3.3.1",
-    "mapbox-gl": "^0.52.0"
+    "mapbox-gl": "^0.52.0",
+    "places.js": "^1.16.4"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
