--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@rails/webpacker": "3.5",
     "bootstrap": "3",
+    "flatpickr": "^4.6.2",
     "jquery": "^3.3.1",
     "mapbox-gl": "^0.52.0",
     "places.js": "^1.16.4"
